force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/PEO_Onboarding_Document_Discrepency__c.object-meta.xml
<CustomObject>
    <label>PEO Underwriting Discrepancies</label>
    <nameField>
        <displayFormat>OF-{0000}</displayFormat>
        <label>Discrepancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PEO Underwriting Discrepancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>