force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/additional_information__c.field-meta.xml
<CustomField>
    <fullName>additional_information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>additional information</label>
    <type>TextArea</type>
</CustomField>