force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Comment_Log__c.field-meta.xml
<CustomField>
    <fullName>Comment_Log__c</fullName>
    <description>Locked Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>