force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Discrepancy_Category__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Category__c</fullName>
    <label>Discrepancy Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>