force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Discrepancy_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Sub_Type__c</fullName>
    <label>Discrepancy Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discrepancy_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% rate change of renewal blank</fullName>
                <label>% rate change of most recent renewal blank</label>
            </value>
            <value>
                <fullName>Answered &quot;yes&quot; missing details</fullName>
                <label>Medical questions answered &quot;yes&quot;, missing details</label>
            </value>
            <value>
                <fullName>Claims info does not cover 12 months</fullName>
            </value>
            <value>
                <fullName>Coverage tier / premium / plan not notated</fullName>
            </value>
            <value>
                <fullName>Employee on invoice, missing from Census</fullName>
            </value>
            <value>
                <fullName>Missing Census</fullName>
            </value>
            <value>
                <fullName>Missing Claim info</fullName>
            </value>
            <value>
                <fullName>Missing Cobra Participants</fullName>
            </value>
            <value>
                <fullName>Missing Dependents</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Missing Invoice</fullName>
            </value>
            <value>
                <fullName>Missing Loss Runs</fullName>
            </value>
            <value>
                <fullName>Missing plan(s) full summaries</fullName>
            </value>
            <value>
                <fullName>Missing Plan Summary</fullName>
                <label>Missing Medical Plan Summary</label>
            </value>
            <value>
                <fullName>Missing Renewal</fullName>
            </value>
            <value>
                <fullName>Not for current plan year</fullName>
            </value>
            <value>
                <fullName>Current Invoice, needs to be dated within 45 days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provided wrong document</fullName>
            </value>
            <value>
                <fullName>Missing Workers Comp Rates and Pricing</fullName>
            </value>
            <value>
                <fullName>Missing employee detail (ex. DOB, zip code, gender)</fullName>
            </value>
            <value>
                <fullName>Missing signature/date/job title</fullName>
            </value>
            <value>
                <fullName>Missing SBC information</fullName>
            </value>
            <value>
                <fullName>Missing OON</fullName>
                <isActive>false</isActive>
                <label>Missing Out of Network Coverage</label>
            </value>
            <value>
                <fullName>Missing RX</fullName>
                <isActive>false</isActive>
                <label>Missing Rx Coverage</label>
            </value>
            <value>
                <fullName>Missing SUI rate notice</fullName>
                <isActive>false</isActive>
                <label>Missing SUI rate notice</label>
            </value>
            <value>
                <fullName>Missing Workers Comp Dec Page</fullName>
                <isActive>false</isActive>
                <label>Missing Workers Comp Dec Page</label>
            </value>
            <value>
                <fullName>Missing full renewal plan summary</fullName>
                <isActive>false</isActive>
                <label>Missing full renewal plan summary</label>
            </value>
            <value>
                <fullName>Missing new rates</fullName>
                <isActive>false</isActive>
                <label>Missing new rates</label>
            </value>
            <value>
                <fullName>Old invoice, needs to be within last 30 days</fullName>
                <isActive>false</isActive>
                <label>Old invoice, needs to be within last 30 days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>