force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Discrepancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Discrepancy_Type__c</fullName>
    <label>Discrepancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Census</fullName>
            </value>
            <value>
                <fullName>Checklist Reject</fullName>
            </value>
            <value>
                <fullName>Claims Information</fullName>
            </value>
            <value>
                <fullName>Health Insurance Renewal</fullName>
            </value>
            <value>
                <fullName>Health Insurance SBC/Plan Design</fullName>
            </value>
            <value>
                <fullName>Health Invoice/PEO Medical Billing Report</fullName>
            </value>
            <value>
                <fullName>Industry Specific Questionnaire</fullName>
            </value>
            <value>
                <fullName>Loss Runs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Workers Comp Rates and Pricing</fullName>
                <label>Workers Comp Codes and Wages</label>
            </value>
            <value>
                <fullName>Workers Comp Questionnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>