force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/PEO_Onboarding_Document__c.field-meta.xml
<CustomField>
    <fullName>PEO_Onboarding_Document__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PEO Onboarding Document</label>
    <referenceTo>PEO_Onboarding_Document__c</referenceTo>
    <relationshipName>PEO_Onboarding_Document_Discrepencies</relationshipName>
    <type>Lookup</type>
</CustomField>