force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/PEO_Underwriting_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Underwriting_Checklist__c</fullName>
    <label>PEO Underwriting Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipName>PEO_Underwriting_Document_Discrepencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>