force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <formula>PEO_Underwriting_Checklist__r.Prospect_Client__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect-Client Name</label>
    <type>Text</type>
</CustomField>