force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Prospect_Comments__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Comments</label>
    <type>TextArea</type>
</CustomField>