force-app/main/default/objects/PEO_Onboarding_Document_Discrepency__c/fields/Total_EE_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_EE_Count__c</fullName>
    <label>Total EE Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>